# VocabTailor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  benchmark_lmhead_swap.py  benchmark_utils.py
benchmarks/information_extraction/: ie_baseline_eval.py  ie_eval.sh  ie_harness.py  ie_vocabtailor_eval.py  ie_vt_eval.sh
benchmarks/machine_translation/: mt_baseline_benchmark.py  mt_baseline_eval.py  mt_baseline_memory_test.py  mt_eval.sh  mt_harness.py  mt_vocabtailor_benchmark.py  mt_vocabtailor_eval.py  mt_vocabtailor_memory_test.py  mt_vt_eval.sh
benchmarks/math/: math_baseline_eval.py  math_harness.py  math_vocabtailor_eval.py
benchmarks/summarization/: summ_baseline_benchmark.py  summ_baseline_eval.py  summ_eval.sh  summ_harness.py  summ_vocabtailor_benchmark.py  summ_vocabtailor_eval.py  summ_vt_eval.sh
docs/: PUBLISHING.md  RELEASE.md
examples/: quickstart_mt_qwen3.py
src/vocab_tailor/: __init__.py  baseline.py  lmdb_layers.py  metrics.py  model_utils.py  split_linear.py  vocab_tailor.py
src/vocab_tailor/profiling/: __init__.py  cli.py  filter.py  unicode_utils.py
src/vocab_tailor/static_vocab/deepseek-coder/code_completion/: DeepSeek_unicode_set_english_math_tol_0.1.json
src/vocab_tailor/static_vocab/llama3.2/summarization/: Llama_unicode_set_english_tol_0.01.json
tests/: README.md  test_vocab_tailor.py  validate.sh  validate_model_package.py  validate_profiling_pipeline.py
tests/golden/: qwen3-1.7b_fp32_vt_zh_tol0.01_mt_eval_en_zh.json
(+5 files in other folders)
