[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vocab-tailor"
version = "0.2.0"
description = "Input-aware vocabulary tailoring for Qwen and other LLMs, with optional LMDB offloading."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "VocabTailor Contributors" }
]
dependencies = [
  "torch>=2.1",
  "transformers>=4.54",
  "lmdb",
  "psutil",
  "accelerate",
  "safetensors",
  "huggingface_hub",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "datasets",
  "evaluate",
]
profiling = [
  "datasets",
]
ie = [
  "lm-eval",
]

[project.scripts]
vocab-tailor-build-vocab = "vocab_tailor.profiling.cli:main"

[project.urls]
Homepage = "https://huggingface.co/vocab-tailor"
Repository = "https://github.com/vocab-tailor/vocab-tailor"
Documentation = "https://github.com/vocab-tailor/vocab-tailor#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vocab_tailor = ["static_vocab/**/*.json"]

